Reorganise into subprojects for turtleprov to use kotlin mutliplatform